# Auomated-Essay-Scoring

./: README.md
code-main/: README.md  example.env  pyproject.toml  requirements.txt  requirements_ci.txt
code-main/notebooks/: labeled_dataset.ipynb  submit-kaggle-hub.ipynb
code-main/notebooks/baseline/: Baseline_LLM.ipynb  Logistic_regression.ipynb
code-main/notebooks/benchmarking/: Benchmark_KNN_all_features.ipynb  Benchmark_KNN_tf_idf.ipynb  Benchmark_Select_K_Best.ipynb
code-main/notebooks/deberta/: Deberta.ipynb  Deberta_2.ipynb
code-main/notebooks/feature_engineering/: DQA.ipynb  EDA_1.ipynb  EDA_2.ipynb  Feature_Extraction.ipynb  Feature_Selection.ipynb
code-main/notebooks/sentence_transformer/: finetune_sentence_transformer.ipynb
code-main/notebooks/setfit/: finetune_on_kaggleonly.ipynb  set_fit_classification.ipynb  set_fit_classification_kfold.ipynb
code-main/scripts/: create-dataset.py  setfit_sweep.py  update_dataset.py
code-main/src/evaluation/: llm_baseline_evaluation_results.csv
code-main/tests/utils/: test_env_vars.py
